# SmartPhotoFilter

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
assets/: SmartPhotoFilter.icns
docs/: ALGORITHM.md  ARCHITECTURE.md  DESIGN_SYSTEM.md
models/: README.md
scripts/: benchmark.py  download_models.py  export_coreml.py
src/: __init__.py  config.py  main.py
src/detector/: __init__.py  aesthetic.py  expression.py  face.py  semantic.py  sharpness.py  similarity.py
src/gui/: __init__.py  app.py  styles.py
src/gui/widgets/: photo_grid.py  result_panel.py  settings_panel.py
src/models/: __init__.py  coreml_runtime.py  model_registry.py
src/pipeline/: __init__.py  exporter.py  scanner.py  scorer.py
src/utils/: exif_utils.py  image_utils.py  platform_utils.py
tests/: __init__.py  test_aesthetic.py  test_expression.py  test_face.py  test_pipeline.py  test_result_panel.py  test_semantic.py  test_sharpness.py
